<resources>
    <string name="app_name">Intelligent Mower System</string>
    <string name="startscreen_title">Intelligent Mobile Systems</string>
    <string name="startscreen_subTitle">Group 3</string>
    <string name="history">History</string>
    <string name="map_view">Map</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="home">Home</string>
    <string name="control_view">Controls</string>
    <string name="collision_avoided">Collision avoided</string>
    <string name="close_icon">close_icon</string>
    <string name="image" />
    <string name="info_icon" />
    <string name="info">Info</string>
    <string name="centerbutton">centerButton</string>
    <string name="center_button_info">center_button_info</string>
    <string name="ok">OK</string>
    <string name="husqvarnamower">husqvarnaMower</string>
    <string name="calendar">Calendar</string>
    <string name="month_and_year">Month and Year</string>
    <string name="whiteListText" />
    <string name="mower_controller">Mower Controller</string>
    <string name="mower_sessions">Mower Sessions</string>
</resources>