<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ImagePopUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="2dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/popup_window_background_container"
            android:layout_width="282dp"
            android:layout_height="430dp"
            android:layout_centerInParent="true"
            android:background="#0A1172"
            android:minHeight="170dp">

            <TextView
                android:id="@+id/popup_window_title"
                android:layout_width="231dp"
                android:layout_height="54dp"
                android:background="#2832C2"
                android:gravity="fill"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/collision_avoided"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="24dp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/popup_close_icon"
                android:layout_width="53dp"
                android:layout_height="54dp"
                android:layout_weight="1"
                android:background="#2832C2"
                android:contentDescription="@string/close_icon"
                android:src="@drawable/icon_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/popup_collision_image"
                android:layout_width="264dp"
                android:layout_height="304dp"
                android:contentDescription="@string/image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popup_window_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>