<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkGrey">

        <TextView
            android:id="@+id/textView_startscreen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startscreen_title"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138" />

        <TextView
            android:id="@+id/textView_startscreen_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startscreen_subTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_startscreen_title"
            app:layout_constraintVertical_bias="0.038" />

        <TextView
            android:id="@+id/textView_x_coordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startscreen_subTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_startscreen_subTitle"
            app:layout_constraintVertical_bias="0.038" />
        <TextView
            android:id="@+id/textView_y_coordinate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startscreen_subTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_x_coordinate"
            app:layout_constraintVertical_bias="0.038" />
        <TextView
            android:id="@+id/textView_collision_avoidance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startscreen_subTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_startscreen_title" />

        <TextView
            android:id="@+id/textView_connection_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startscreen_subTitle"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_collision_avoidance"
            app:layout_constraintVertical_bias="0.038" />

        <ImageView
            android:id="@+id/husqvarna_mower"
            android:layout_width="340dp"
            android:layout_height="203dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_connection_state"
            app:layout_constraintVertical_bias="0.6"
            app:srcCompat="@drawable/husqvarna_robotic_mower"
            android:contentDescription="@string/husqvarnamower" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="411dp"
            android:layout_height="407dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_connection_state"
            app:layout_constraintVertical_bias="0.84">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Mowing Schedule"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/monthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="8dp"
                android:text="@string/month_and_year"
                android:textColor="@color/green"
                android:textSize="18sp" />

            <com.kizitonwose.calendar.view.CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="319dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/rounded_corners"
                android:padding="15dp"
                app:cv_dayViewResource="@layout/calendar_day_layout"
                app:cv_monthHeaderResource="@layout/calendar_day_titles_container"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_connection_state" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>